cmake_minimum_required(VERSION 3.26)
project(Ctrl_Alt_Elite_Bablo)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)

add_executable(Ctrl_Alt_Elite_Bablo
        Adapter.cpp
        Adapter.h
        allocate_budget_command.cpp
        allocate_budget_command.h
        Apartment.cpp
        Apartment.h
        Bike.cpp
        Bike.h
        Budget.cpp
        Budget.h
        BudgetDepartment.cpp
        BudgetDepartment.h
        Building.cpp
        Building.h
        BuildingTarget.cpp
        BuildingTarget.h
        Bus.cpp
        Bus.h
        BusyState.cpp
        BusyState.h
        Car.cpp
        Car.h
        Citizen.cpp
        Citizen.h
        City.cpp
        City.h
        command.h
        Commercial.cpp
        Commercial.h
        CompositeBuilding.cpp
        CompositeBuilding.h
        CulturalCenter.cpp
        CulturalCenter.h
        departments.h
        Education.cpp
        Education.h
        Energy.cpp
        Energy.h
        Estate.cpp
        Estate.h
        Factories.cpp
        Factories.h
        Government.cpp
        Government.h
        HealthCare.cpp
        HealthCare.h
        House.cpp
        House.h
        Industrial.cpp
        Industrial.h
        Iterator.h
        Landmarks.cpp
        Landmarks.h
        LawEnforcment.cpp
        LawEnforcment.h
        Mall.cpp
        Mall.h
        Materials.cpp
        Materials.h
        ModeOfTransport.cpp
        ModeOfTransport.h
        ModerateState.cpp
        ModerateState.h
        Monument.cpp
        Monument.h
        Office.cpp
        Office.h
        Park.cpp
        Park.h
        Plane.cpp
        Plane.h
        Plants.cpp
        Plants.h
        PoliciesDepartment.cpp
        PoliciesDepartment.h
        policy_command.cpp
        policy_command.h
        PowerPlants.cpp
        PowerPlants.h
        PrivateBusyState.cpp
        PrivateBusyState.h
        PrivateModerateState.cpp
        PrivateModerateState.h
        PrivateQuietState.cpp
        PrivateQuietState.h
        PrivateTransport.cpp
        PrivateTransport.h
        PrivateTransportState.cpp
        PrivateTransportState.h
        public_services_command.cpp
        public_services_command.h
        PublicServicesDepartment.cpp
        PublicServicesDepartment.h
        PublicTransport.cpp
        PublicTransport.h
        PublicTransportState.cpp
        PublicTransportState.h
        QuietState.cpp
        QuietState.h
        Residential.cpp
        Residential.h
        Resource.cpp
        Resource.h
        ResourceFactory.cpp
        ResourceFactory.h
        SewageSystems.cpp
        SewageSystems.h
        Shop.cpp
        Shop.h
        tax_command.cpp
        tax_command.h
        TaxationDepartment.cpp
        TaxationDepartment.h
        Taxi.cpp
        Taxi.h
        testing.cpp
        Townhouse.cpp
        Townhouse.h
        Train.cpp
        Train.h
        TransportationState.cpp
        TransportationState.h
        TransportStrategy.cpp
        TransportStrategy.h
        Utilities.cpp
        Utilities.h
        Walk.cpp
        Walk.h
        Warehouses.cpp
        Warehouses.h
        WasteManagement.cpp
        WasteManagement.h
        Water.cpp
        Water.h
        WaterSupply.cpp
        WaterSupply.h)
